# Foo and I are too lazy to update this most of the time, join the discord in the client tab on the main menu to stay up to date on new stuff.

# Version 6.5.4
 * Fixed an issue with not enough / too many particles appearing based on fps
 * Improved navigation when assume unstrict is toggled on
 * Added !fuel command with an optional interval in seconds to run /fuel on cn
 * Long names in the player list now wrap
 * Fixed an impossibly rare edge case where core items were formatted wrong if the team had exactly -2147483648 of them
 * Parallaxes now move the player again
 * Fixed an issue with logic virus warnings appearing when peeking into a logic block
 * Power split notifications now work with SHIFT + Z
 * Fixed bridge clicking and dragging not linking with nearby bridges
 * Added some additional icons to :emote: autocomplete 
 * Improved logic virus detection
 * Larger schematics are automatically deselected when placed, hold SHIFT to place multiple
 * Reworked hints some more
 TODO: Finish me

# Version 6.5.3
 * Changed icons for encrypted and verified messages
 * Fixed a bug in buildpath
 * Fixed discord rich presence not starting on client launch when not on steam
 * Fixed logic virus warnings being incredibly spammy
 * Removed virus removal messages, those were just annoying
 * A !js command was added an update or two ago but I forgot to list it in the changelog

# Version 6.5.2
 * Fix hints consuming click, even when invisible
 * Fix green verified messages
 * Auto bridge doesn't bridge over blocks in the transportation category (aside from plast conveyors)

# Version 6.5.1
 * Fix a crash related to chatting in singleplayer
 * Fix a setting missing from the settings menu
 * Blocks placed/interacted with by ai will appear in [lightgray]light gray[]
 * Player names no longer have color in placement logs and warnings
 * Fixed build path moving back and forth constantly when nothing is affordable